<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MEGA Provider</string>
    <string name="login_subtitle">Sign in to access your MEGA cloud drive</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="fill_fields">Please enter email and password</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="session_expired">Session expired. Please sign in again.</string>
    <string name="logged_out">Signed out</string>
    <string name="logged_in_message">You are signed in.\nMEGA is available in your file manager.</string>
</resources>
